# house-prediction

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: serve.py
backend/app/api/routes/: health.py  predict.py
backend/app/core/: config.py  logging.py
backend/app/io/: __init__.py  artifacts.py  model_registry.py
backend/app/pipelines/: __init__.py  base.py  classification.py  regression.py
backend/app/schemas/: __init__.py  request.py  response.py
backend/app/training/: __init__.py  classification.py  regression.py  utils.py
backend/app/transformer/: __init__.py  base.py  feature_engineering.py  preprocessing.py  selection.py
backend/bugs_report/: Stateful Transformer In Pipeline.md  feature_engineering
backend/scripts/: provision_azure.sh
backend/tests/integration/: test_azure_blob.py
