[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob>=12.24",
    "fastapi>=0.115",
    "joblib>=1.4",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.34",
    "xgboost>=3.2.0",
]
